2021-08-05 James D. Trotter <james@simula.no>

	Implement column major sorting for sparse matrices in coordinate
	format.

2021-08-02 James D. Trotter <james@simula.no>

	Implement several new commands, including mtxscal, mtxaxpy, mtxdot
	and mtxnrm2. These are based on the corresponding BLAS operations.

	Also, add functions for setting matrix or vector values equal to
	zero or a given constant value.

	Add support for writing vectors in coordinate format to file.

	Remove some unused functions, improve error handling and fix
	various, minor issues.

2021-07-28 James D. Trotter <james@simula.no>

	Implement the command `mtxreorder', which reorders a symmetric
	sparse matrix using RCM.

	Add `mtx_matrix_reorder_rcm' to reorder a sparse matrix with
	symmetric sparsity pattern based on the Reverse Cuthill-McKee
	algorithm.

	Add `mtx_matrix_row_index' and `mtx_matrix_column_index' to obtain
	the row or column index of a given nonzero of a matrix.

	Add the function `mtx_matrix_row_ptr' to compute row pointers of a
	matrix. This can be used, for example, when converting a matrix to
	compressed sparse row format.

	Add `mtx_permute_vector' and `mtx_permute_matrix'. The former
	permutes the elements of a vector, whereas the latter permutes the
	rows and/or columns of a matrix.

	Add missing functions for creating sparse vectors.

2021-07-02 James D. Trotter <james@simula.no>

	Add the function `mtx_matrix_size_per_row' to count the number of
	entries stored in each row of a matrix.

	Add the function `mtx_set_comment_lines' to reduce code
	duplication related to allocating storage for and copying comment
	lines to a Matrix Market object.

	Consistently set `num_columns' to -1 for vectors, and also set
	`nonzero_size'.

2021-06-30 James D. Trotter <james@simula.no>

	Allow specifying a format string for outputting numerical values
	for Matrix Market objects.

	Fix various issues with installation and distribution.
